# MaxSubGraph_CUDA_C

./: CMakeLists.txt  README.md  compare_Output  mc_split_output.txt  output.txt  outputPython.txt  smiles.txt
buil/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
script/: esempio.py  porcodio.py  prova.py  proveFra.py  python_Print_to_file.py
scrpit/: MCSplit.py
src/: Label.cpp  calc_bound.cpp  cpu_mc_split.cpp  g2mol.cpp  gen_bond_labels.cpp  gen_initial_labels.cpp  gen_ring_classes.cpp  gen_rotations.cpp  gpu_mc_split.cpp  gpu_mc_split.cu  hood.cpp  main.cpp  mc_split.cpp  mol_mcs.cpp  pair_vertex.cpp  search_mcs.cpp  select_label.cpp  select_vertex.cpp  smiles_mcs.cpp  tempCodeRunnerFile.cpp  test.cpp  test.hpp  testFra  testFra.cpp  testFra.cu  testFra.hpp
src/testFra.dSYM/Contents/: Info.plist
src/testFra.dSYM/Contents/Resources/DWARF/: testFra
src/testFra.dSYM/Contents/Resources/Relocations/aarch64/: testFra.yml
